force-app/main/default/objects/MortgageDocument__c/MortgageDocument__c.object-meta.xml
<CustomObject>
    <label>Mortgage Document</label>
    <nameField>
        <displayFormat>MD-{0000000}</displayFormat>
        <label>Mortgage Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>