force-app/main/default/objects/MortgageDocument__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortgage Documents</relationshipLabel>
    <relationshipName>Mortgage_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>