force-app/main/default/objects/MortgageDocument__c/fields/File_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Display_Name__c</fullName>
    <label>File Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>