force-app/main/default/objects/MortgageDocument__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Payslips</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Proof_of_Address</fullName>
                <label>Proof of Address</label>
            </value>
            <value>
                <fullName>Proof_of_deposit</fullName>
                <label>Proof of deposit</label>
            </value>
            <value>
                <fullName>Gifted_deposit_letter</fullName>
                <label>Gifted deposit letter</label>
            </value>
            <value>
                <fullName>P60</fullName>
            </value>
            <value>
                <fullName>Recent_CV</fullName>
                <label>Recent CV</label>
            </value>
            <value>
                <fullName>Residence_Permit</fullName>
                <label>Residence permit</label>
            </value>
            <value>
                <fullName>SA302</fullName>
            </value>
            <value>
                <fullName>Bank_statement</fullName>
                <label>Bank statement</label>
            </value>
            <value>
                <fullName>Tax_overview</fullName>
                <label>Tax overview</label>
            </value>
            <value>
                <fullName>Employment_contract</fullName>
                <label>Employment contract</label>
            </value>
            <value>
                <fullName>Credit_report</fullName>
                <label>Credit report</label>
            </value>
            <value>
                <fullName>Signed_AST_agreement</fullName>
                <label>Signed AST agreement</label>
            </value>
            <value>
                <fullName>ARLA`_letter</fullName>
                <label>ARLA letter</label>
            </value>
            <value>
                <fullName>Signed_accounts</fullName>
                <label>Signed accounts</label>
            </value>
            <value>
                <fullName>Accountants_reference</fullName>
                <label>Accountant&apos;s reference</label>
            </value>
            <value>
                <fullName>Evidence_of_bonus</fullName>
                <label>Evidence of bonus</label>
            </value>
            <value>
                <fullName>National_ID_document</fullName>
                <label>National ID document</label>
            </value>
            <value>
                <fullName>Driving_license</fullName>
                <label>Driving license</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Agreements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>