force-app/main/default/objects/MortgageDocument__c/fields/Mortgage_Case__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Case</label>
    <referenceTo>Mortgage_Case__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Mortgage_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>