force-app/main/default/objects/MortgageDocument__c/fields/MW_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>MW_Applicant_ID__c</fullName>
    <label>MW Applicant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>