force-app/main/default/objects/MortgageDocument__c/fields/Verified_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date_and_Time__c</fullName>
    <label>Verified Date and Time</label>
    <type>DateTime</type>
</CustomField>